fix bug with overflow

--- a/app/styles/main-header-hero.scss
+++ b/app/styles/main-header-hero.scss
@@ -4,7 +4,7 @@
     position: relative;
     background-color: black;
     margin-bottom: 30px;
-    // margin-top: -30px;
+    margin-top: -30px;
     button {
         &.myft-follow {
             background-color: transparent;
