--- a/app/styles/main-scrolly-telling.scss
+++ b/app/styles/main-scrolly-telling.scss
@@ -62,6 +62,9 @@
     #story-body-container, #ios-story-body, .story-container {
         padding: 0 !important;
     }
+    #story-body-container, #ios-story-body {
+        overflow: visible !important;
+    }
     #promo-box-container {
         display: none;
     }
